--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
+
+@font-face {
+    font-family:'Montserrat';
+    src: url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+}
+
 @tailwind utilities;
